# hairutil

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
completions/: hairutil-completion.bash
include/: cmd.h  common.h  cyHairFile.h  io.h  kdtree.h  output_file.h  random.h  util.h
src/: globals.cpp  main.cpp  output_file.cpp  util.cpp  version.cpp.in
src/cmd/: autofix.cpp  convert.cpp  decompose.cpp  filter.cpp  findpenet.cpp  getcurvature.cpp  info.cpp  resample.cpp  smooth.cpp  stats.cpp  subsample.cpp  transform.cpp  tubify.cpp
src/io/: abc.cpp  bin.cpp  data.cpp  hair.cpp  ma.cpp  npy.cpp  ply.cpp
test/: cmd.cpp  io.cpp  util.cpp
test/data/: Bangs_100.abc  Bangs_100.data  Bangs_100.hair  Bangs_100.ma  Bangs_100_ascii.ply  Bangs_100_binary.ply  Bangs_100_penet.txt  Bangs_head.ply  Curly_100.ply  base_0_idx_17453.npy  c2_interp_test1.ply  c2_interp_test2.ply  c2_interp_test3.ply  c2_interp_test4.ply  catmull_rom_test1.ply  catmull_rom_test2.ply
